--- a/utahtech2/style.css
+++ b/utahtech2/style.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: #FFFFFF;
     color: #666666;
@@ -33,6 +32,11 @@ dt {
 
 .ut {
     color: #BA1C21;
+    font-weight: bold;
+}
+
+.studentemphasize {
+    color: red;
     font-weight: bold;
 }
 
