--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -12,7 +12,7 @@ header {
 }
 
 header h1 {
-    background-image: url(utahtechlogo.png);
+    background-image: url(utahtechlogo.svg);
     background-position: right;
     background-repeat: no-repeat;
     background-origin: content-box;
