--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -5,6 +5,11 @@ body {
     background-attachment: fixed;
 }
 
+main {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
 header {
     background-color: #003058;
     color: #FFFFFF;
@@ -25,11 +30,19 @@ header h1 {
 nav {
     font-weight: bold;
     background-color: #F3F3F3;
+    padding-top: 0.5rem;
+    padding-middle: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 2rem;
 }
 
 h2 {
     color: #424242;
     font-family: Georgia, serif;
+}
+
+h3 {
+    color: #003058;
 }
 
 dt {
@@ -51,6 +64,7 @@ footer {
     font-size: .70rem;
     font-style: italic;
     text-align: center;
+    padding: 1rem;
 }
 
 #wrapper {
@@ -59,4 +73,22 @@ footer {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
+}
+
+#homehero {
+    height: 300px;
+    background-image: url(studenthero.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+#facultyhero {
+    height: 300px;
+    background-image: url(facultyhero.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+nav a {
+    text-decoration: none;
 }
