--- a/utahtech4/style.css
+++ b/utahtech4/style.css
@@ -3,23 +3,17 @@ body {
     color: #666666;
     font-family: Verdana, Arial, sans-serif;
     background-attachment: fixed;
-    margin: 0px;
 }
 
 main {
     padding-left: 2rem;
     padding-right: 2rem;
-    grid-row: 4 / 5;
-    grid-column: 2 / 8;
-    background-color: #ffffff;
 }
 
 header {
     background-color: #003058;
     color: #FFFFFF;
     font-family: Georgia, serif;
-    grid-row: 1 / 2;
-    grid-column: 2 / 8;
 }
 
 header h1 {
@@ -28,45 +22,19 @@ header h1 {
     background-repeat: no-repeat;
     background-origin: content-box;
     padding-left: 1em;
-    margin: 0px;
+    margin-bottom: 0;
     line-height: 140%;
     padding: .5rem;
 }
 
-head a {
-    text-decoration: none;
-    color: #FFFFFF;
-}
-
-main img {
-    float: right;
+nav {
+    font-weight: bold;
+    background-color: #F3F3F3;
+    padding-top: 0.5rem;
+    padding-right: 0.5rem;
+    padding-bottom: 0.5rem;
     padding-left: 2rem;
 }
-
-nav {
-    position: sticky;
-    top: 0;
-    font-weight: bold;
-    background-color: #424242;
-    padding: 0px;
-    margin: 0px;
-    grid-row: 2 / 3;
-    grid-column: 2 / 8;
-}
-
-nav ul {
-    margin: 0px;
-    padding: 0px;
-    display: flex;
-    flex-flow: row nowrap;
-    list-style-type: none;
-}
-
-nav ul li {
-    width: 100%;
-}
-
-
 
 h2 {
     color: #424242;
@@ -97,18 +65,20 @@ footer {
     font-style: italic;
     text-align: center;
     padding: 1rem;
-    grid-row: 5 / 6;
-    grid-column: 2 / 8;
 }
 
-* {
-    box-sizing: border-box;
+this {
+    
 }
 
 #wrapper {
-    display: grid;
-    grid-auto-rows: minmax(0px, auto);
-    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
+    background-color: #ffffff;
+    min-width: 960px;
+    max-width: 2048px;
+    box-shadow: 0px 3px 3px rgba(66, 66, 66, 0.3);
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 #homehero {
@@ -116,8 +86,6 @@ footer {
     background-image: url(homehero.jpg);
     background-size: cover;
     background-position: center;
-    grid-row: 3 / 4;
-    grid-column: 2 / 8;
 }
 
 #studenthero {
@@ -125,8 +93,6 @@ footer {
     background-image: url(studenthero.jpg);
     background-size: cover;
     background-position: center;
-    grid-row: 3 / 4;
-    grid-column: 2 / 8;
 }
 
 #facultyhero {
@@ -134,19 +100,8 @@ footer {
     background-image: url(facultyhero.jpg);
     background-size: cover;
     background-position: center;
-    grid-row: 3 / 4;
-    grid-column: 2 / 8;
 }
 
 nav a {
     text-decoration: none;
-    color: #FFFFFF;
-    padding: 1rem 0rem;
-    display: block;
-    text-align: center;
 }
-
-nav a:hover {
-    background-color: #BA1C21
-}
-
