--- a/utahtech5/style.css
+++ b/utahtech5/style.css
@@ -140,14 +140,14 @@ footer {
 
 #bluebar {
     background-color: #003058;
-    grid-row: 1 / 2
-    grid-column: 1 / -1
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
 }
 
 #greybar {
     background-color: #424242;
     grid-row: 2 / 3;
-    grid-column: 1 / -1
+    grid-column: 1 / -1;
 }
 
 nav a {
