--- a/utahtech5/style.css
+++ b/utahtech5/style.css
@@ -142,12 +142,14 @@ footer {
     background-color: #003058;
     grid-row: 1 / 2;
     grid-column: 1 / -1;
+    width: 100%;
 }
 
 #greybar {
     background-color: #424242;
     grid-row: 2 / 3;
     grid-column: 1 / -1;
+    width: 100%;
 }
 
 nav a {
@@ -204,7 +206,7 @@ nav a:hover {
     }
 }
 
-@media screen and (width: 600px) {
+@media screen and (max-width: 600px) {
     header h1 {
         background-image: none;
         text-align: center;
@@ -213,6 +215,10 @@ nav a:hover {
     nav {
         grid-row: 2 / 3;
         grid-column: 1 / -1;
+    }
+    
+    nav ul {
+        flex-flow: column nowrap;
     }
 
     #homehero {
