--- a/utahtech5/style.css
+++ b/utahtech5/style.css
@@ -141,14 +141,14 @@ footer {
 #bluebar {
     background-color: #003058;
     grid-row: 1 / 2;
-    grid-column: 1 / -1;
+    grid-column: 1 / 9;
     width: 100%;
 }
 
 #greybar {
     background-color: #424242;
     grid-row: 2 / 3;
-    grid-column: 1 / -1;
+    grid-column: 1 / 9;
     width: 100%;
 }
 
@@ -173,9 +173,10 @@ nav a:hover {
 @media screen and (max-width: 900px) {
     nav {
         grid-row: 2 / 3;
-        grid-column: 1 / 5
+        grid-column: 1 / 5;
+        position: static;
     }
-    
+
     nav ul {
         flex-flow: column nowrap;
     }
@@ -216,7 +217,7 @@ nav a:hover {
         grid-row: 2 / 3;
         grid-column: 1 / -1;
     }
-    
+
     nav ul {
         flex-flow: column nowrap;
     }
