--- a/utahtech7/style.css
+++ b/utahtech7/style.css
@@ -213,6 +213,31 @@ nav a:hover {
     background-color: #BA1C21
 }
 
+table {
+    margin: 0 auto;
+    border: 1px solid #424242;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    padding: 5px;
+    border: 1px solid #424242;
+}
+
+td {
+    text-align: center;
+}
+
+.text {
+    text-align: left;
+}
+
+tbody tr:nth-of-type(even) {
+    background-color: #F3F3F3;
+}
+
 @media screen and (max-width: 1100px) {
     #wrapper {
         grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0px, 150px)) minmax(0px, 1fr);
